feat(todo): add todo
- Add environment configuration for different stages
- Integrate Playwright for end-to-end testing
- Implement Todo service for managing todos
- Enhance add-form component with validation and notifications
- Update todo-table component to display todos dynamically
- Add localization support for English and French
- Configure base URL interceptor for API requests

Refs: #1

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,18 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+#env
+src/environments/environment.development.ts
+.env*
+.flaskenv*
+!.env.project
+!.env.vault
+
+# Playwright
+node_modules/
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
