--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "e2e-test:local:FR_fr": "E2E_LANGUAGE=fr npx playwright test --project=local",
-    "e2e-test:local:EN_us": "E2E_LANGUAGE=en npx playwright test --project=local"
+    "e2e-test:local:EN_us": "E2E_LANGUAGE=en npx playwright test --project=local",
+    "deploy": "gh-pages -d dist/browser",
+    "docker:build-run": "docker build --no-cache -t ng-todo . && docker run -p 8080:80 --name ng-todo ng-todo:latest"
   },
   "private": true,
   "dependencies": {
@@ -35,6 +37,7 @@
     "@playwright/test": "^1.56.0",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^24.7.2",
+    "gh-pages": "^6.3.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
